@@ -1,55 +1,150 @@
 package datamodel;
 
+import java.util.Collections;
 
+/**
+ * Entity class representing a Customer as a person who creates and holds (owns) orders in the system.
+ * @version <code style=color:green>{@value application.package_info#Version}</code>
+ * @author <code style=color:blue>{@value application.package_info#Author}</code>
+ */
 public class Customer {
+        /**
+     * Eindeutige Kunden-ID, Standardwert -1 für nicht gesetzt.
+     */
+    private long id = -1;
 
+    /**
+     * Nachname des Kunden, initial leer.
+     */
+    private String lastName = "";
+
+    /**
+     * Vorname des Kunden, initial leer.
+     */
+    private String firstName = "";
+
+    /**
+     * Liste der Kontakte (z.B. E-Mail, Telefonnummer) des Kunden.
+     */
+    private final java.util.List<String> contacts = new java.util.ArrayList<>();
+    /**
+     * Erstellt einen neuen Kunden mit leerem Namen und keiner ID
+     */
     public Customer() { }
 
-    public Customer(String name) { }
+    /**
+     * Erstellt einen neuen Kunden mit dem gegebenen Namen.
+     * @param name Vollständiger Name des Kunden
+     */
+    public Customer(String name) {
+        setName(name);
+     }
 
-
+    /**
+    * Gibt die ID des Kunden zurück.
+    * @return Kunden-ID, -1 bei keiner ID.
+    */
     public long getId() {
-        return 0L;
+        return id;
     }
-
+    /**
+     * Setzt die ID des Kunden. Kann nur einmalig gesetzt werden.
+     * Bei erneutem Setzen bleibt die ID unverändert.
+     * @param id Die zu setzende Kunden-ID
+     * @return Referenz auf das Customer-Objekt (this)
+     */
     public Customer setId(long id) {
+        if (id < 0) throw new IllegalArgumentException("ID must be >= 0");
+        if (this.id == -1) {
+            this.id = id;
+        }
+        // ignoriert weiteren setId-Aufruf (wie Vorgabe)
         return this;
     }
-
+    /**
+     * Gibt den Nachnamen des Kunden zurück.
+     * @return Nachname des Kunden als String
+     */
     public String getLastName() {
-        return "";
+        return lastName;
     }
-
+    /**
+     * Gibt den Vornamen des Kunden zurück.
+     * @return Vorname des Kunden als String
+     */
     public String getFirstName() {
-        return "";
+        return firstName;
     }
-
+    /**
+     * Setzt den Vor- und Nachnamen des Kunden.
+     * @param first Vorname des Kunden
+     * @param last Nachname des Kunden
+     * @return Referenz auf das Customer-Objekt (this)
+     */
     public Customer setName(String first, String last) {
+        if (first == null || last == null || last.isEmpty())
+            throw new IllegalArgumentException("last name empty");
+        this.firstName = first;
+        this.lastName = last;
         return this;
     }
-
+    /**
+     * Setzt den vollständigen Namen des Kunden. 
+     * Der Name wird nach Regeln aufgeteilt (siehe splitName).
+     * @param name Vollständiger Name
+     * @return Referenz auf das Customer-Objekt (this)
+     */
     public Customer setName(String name) {
+        splitName(name);
         return this;
     }
-
+    /**
+     * Gibt die Anzahl der Kontakte zurück, die diesem Kunden zugeordnet sind.
+     * @return Anzahl der Kontakte als int
+     */
     public int contactsCount() {
-        return 0;
+        return contacts.size();
     }
-
+    /**
+     * Gibt alle Kontakte (z.B. Email, Telefonnummer) dieses Kunden zurück.
+     * @return Iterable mit allen Kontaktdaten
+     */
     public Iterable<String> getContacts() {
-        return java.util.List.of();
+        return Collections.unmodifiableList(contacts);
     }
-
+    /**
+     * Fügt einen neuen Kontakt (z.B. Email, Telefonnummer) hinzu.
+     * Doppelte Kontakte werden ignoriert.
+     * @param contact Kontaktinformation als String
+     * @return Referenz auf das Customer-Objekt (this)
+     */
     public Customer addContact(String contact) {
+        String trimmed = trim(contact);
+        if (contact == null || trimmed.isEmpty())
+            throw new IllegalArgumentException("contact is null or empty");
+        if (trimmed.length() < 6)
+            throw new IllegalArgumentException("contact less than 6 characters: \"" + contact + "\".");
+        if (!contacts.contains(trimmed)) {
+            contacts.add(trimmed);
+        }
         return this;
     }
-
+    /**
+     * Löscht den Kontakt an der angegebenen Position aus der Kontaktliste.
+     * @param i Index des zu löschenden Kontakts
+     * @throws UnsupportedOperationException falls nicht implementiert
+     */
     public void deleteContact(int i) {
-        throw new UnsupportedOperationException("method deleteContact(i) has not yet been implemented");
+        if (i >= 0 && i < contacts.size()) {
+            contacts.remove(i);
+        }
     }
-
+    /**
+     * Löscht alle Kontakte des Kunden.
+     * @throws UnsupportedOperationException falls nicht implementiert
+     */
     public void deleteAllContacts() {
-        throw new UnsupportedOperationException("method deleteAllContacts() has not yet been implemented");
+        contacts.clear();    
     }
 
     /**
@@ -96,7 +191,29 @@ public class Customer {
      * @throws IllegalArgumentException if name argument is null or empty
      */
     public void splitName(String name) {
-        throw new UnsupportedOperationException("method splitName(name) has not yet been implemented");
+if (name == null || name.trim().isEmpty())
+            throw new IllegalArgumentException("Name must not be null/empty");
+
+        // Entferne führende/trailende Leerzeichen, Kommata, Semikola, Quotes
+        String trimmed = trim(name);
+
+        // Komma oder Semikolon: Nachname, Vorname
+        String[] split;
+        if (trimmed.contains(",") || trimmed.contains(";")) {
+            split = trimmed.split("[,;]", 2);
+            this.lastName = trim(split[0]);
+            this.firstName = trim(split.length > 1 ? split[1] : "");
+        } else {
+            // Kein Komma/Semikolon: Letztes Wort ist Nachname, Rest ist Vorname
+            String[] parts = trimmed.trim().split("\\s+");
+            if (parts.length == 1) {
+                this.firstName = "";
+                this.lastName = parts[0];
+            } else {
+                this.firstName = String.join(" ", java.util.Arrays.copyOf(parts, parts.length - 1));
+                this.lastName = parts[parts.length - 1];
+            }
+        }
     }
 
     /**
